8231583: Shenandoah: Fix register clash in SBSA::resolve_forwarding_pointer() borrowing

Reviewed-by: rkennke